# eclipse

./: .gitignore  CMakeLists.txt  injector  readme.md  toolbox.sh
discordBot/: database.json  main.py
release/genhwid/: genhwid  genhwid.cpp
release/loader/: kubos  loader.sh
release/server/: app.py  kubos  libeclipse_unprotected.so.vmp  loader.sh
src/: chook.hpp  hooks.cpp  hooks.hpp  interfaces.cpp  interfaces.hpp  main.cpp  sdlhook.cpp  vulkanhook.cpp
src/features/: backtrack.cpp  backtrack.hpp  chams.cpp  chams.hpp  discordrpc.cpp  discordrpc.hpp  esp.cpp  esp.hpp  glow.cpp  glow.hpp  legitbot.cpp  legitbot.hpp  lua.cpp  lua.hpp  misc.cpp  misc.hpp  movement.cpp  movement.hpp  ragebot.cpp  ragebot.hpp  skinchanger.cpp  skinchanger.hpp  visuals.cpp  visuals.hpp
src/features/gamesdk/: achievement_manager.h  activity_manager.h  application_manager.h  core.h  discord.h  event.h  ffi.h  image_manager.h  lobby_manager.h  network_manager.h  overlay_manager.h  relationship_manager.h  storage_manager.h  store_manager.h  user_manager.h  voice_manager.h
src/features/luabridge/: RefCountedObject.h  RefCountedPtr.h
src/features/luabridge/detail/: FuncTraits.h  LuaException.h  LuaRef.h  Namespace.h  Stack.h  Userdata.h
src/menu/: config.hpp  config.hpp.retarded  fonts.hpp  keybinders.cpp  keybinders.hpp  menu.cpp  menu.hpp
src/menu/blur/: blur.cpp  blur.hpp  blurX.glsl  blurY.glsl  passthrough.glsl
src/menu/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
src/sdk/: allnetvars.hpp  classids.hpp  cutil.hpp  entity.cpp  entity.hpp  math.cpp  math.hpp  netvars.cpp  netvars.hpp
src/sdk/interfaces/: effects.hpp  globals.hpp  glowobjectmanager.hpp  ibaseclientdll.hpp  icliententitylist.hpp  iclientmode.hpp  icvar.hpp  ienginetrace.hpp  igameevent.hpp  imaterialsystem.hpp  iprediction.cpp  iprediction.hpp  ivengineclient.hpp  ivmodelrender.hpp  panorama.cpp  panorama.hpp  stringtable.hpp  viewrenderbeams.hpp
src/util/: log.cpp  log.hpp  memory.cpp  memory.hpp
src/util/protection/: protection.cpp  protection.hpp
